# OpenGL-Experiments

./: CMakeLists.txt
include/: main.hpp.in
src/: main.cpp
src/FragmentShader/: SimpleFragmentShader.glsl
src/VertexShader/: SimpleVertexShader.glsl
src/common/: loadShader.cpp  matrixlib.cpp  matrixlib.hpp
